demo/service.yml
kind: Service
apiVersion: v1
metadata:
  name: demo-service
spec:
  selector:
    app: demo
  type: ClusterIP
  ports:
  - port: 8080
