demo/service2.yml
kind: Service
apiVersion: v1
metadata:
  name: demo-service2
spec:
  selector:
    app: demo
  type: ClusterIP
  ports:
  - port: 8080
